Bug #46916
tools: ceph-immutable-object-cache plugin register failed
0%
Description
In newest master branch, the immutable-object-cache plugin doesn't work. Failed in PluginRegistry::load(...)
My parent cache configure:
rbd parent cache enabled = true
rbd plugins = parent_cache
immutable_object_cache_path = /root/cmyin/cache
immutable_object_cache_max_size = 8G
root@cm-server:~/CeTune/deploy# ceph osd pool create test 32
pool 'test' created
root@cm-server:~/CeTune/deploy# rbd pool init test
root@cm-server:~/CeTune/deploy# rbd create --size 1024 test/testimage1
root@cm-server:~/CeTune/deploy# rbd snap create test/testimage1@testsnap
2020-08-13T21:26:05.065+0800 7fc3ab7fe700 -1 load failed dlopen(): "/usr/local/lib/ceph/librbd/libceph_librbd_parent_cache.so: undefined symbol: _ZN6librbd2io4util11read_parentINS_8ImageCtxEEEvPT_mRKSt6vectorISt4pairImmESaIS8_EEmRKN7ZTracer5TraceEPN4ceph6buffer7v15_2_04listEP7Context" or "/usr/local/lib/ceph/libceph_librbd_parent_cache.so: cannot open shared object file: No such file or directory"
2020-08-13T21:26:05.065+0800 7fc3ab7fe700 -1 librbd::PluginRegistry: 0x5561ad8dfd30 init: failed to load plugin: parent_cache
2020-08-13T21:26:05.065+0800 7fc3ab7fe700 -1 librbd::image::OpenRequest: failed to initialize plugin registry: (2) No such file or directory
Creating snap: 100% complete...done.
root@cm-server:~/CeTune/deploy# rbd snap protect test/testimage1@testsnap
2020-08-13T21:26:12.165+0800 7fce267fc700 -1 load failed dlopen(): "/usr/local/lib/ceph/librbd/libceph_librbd_parent_cache.so: undefined symbol: _ZN6librbd2io4util11read_parentINS_8ImageCtxEEEvPT_mRKSt6vectorISt4pairImmESaIS8_EEmRKN7ZTracer5TraceEPN4ceph6buffer7v15_2_04listEP7Context" or "/usr/local/lib/ceph/libceph_librbd_parent_cache.so: cannot open shared object file: No such file or directory"
2020-08-13T21:26:12.165+0800 7fce267fc700 -1 librbd::PluginRegistry: 0x55c4d8ea6650 init: failed to load plugin: parent_cache
2020-08-13T21:26:12.165+0800 7fce267fc700 -1 librbd::image::OpenRequest: failed to initialize plugin registry: (2) No such file or directory
root@cm-server:~/CeTune/deploy# rbd clone test/testimage1@testsnap test/clone1
2020-08-13T21:26:17.205+0800 7f75e5600700 -1 load failed dlopen(): "/usr/local/lib/ceph/librbd/libceph_librbd_parent_cache.so: undefined symbol: _ZN6librbd2io4util11read_parentINS_8ImageCtxEEEvPT_mRKSt6vectorISt4pairImmESaIS8_EEmRKN7ZTracer5TraceEPN4ceph6buffer7v15_2_04listEP7Context" or "/usr/local/lib/ceph/libceph_librbd_parent_cache.so: cannot open shared object file: No such file or directory"
2020-08-13T21:26:17.205+0800 7f75e5600700 -1 librbd::PluginRegistry: 0x55f1979ae470 init: failed to load plugin: parent_cache
2020-08-13T21:26:17.205+0800 7f75e5600700 -1 librbd::image::OpenRequest: failed to initialize plugin registry: (2) No such file or directory
2020-08-13T21:26:17.213+0800 7f75e5600700 -1 load failed dlopen(): "/usr/local/lib/ceph/librbd/libceph_librbd_parent_cache.so: undefined symbol: _ZN6librbd2io4util11read_parentINS_8ImageCtxEEEvPT_mRKSt6vectorISt4pairImmESaIS8_EEmRKN7ZTracer5TraceEPN4ceph6buffer7v15_2_04listEP7Context" or "/usr/local/lib/ceph/libceph_librbd_parent_cache.so: cannot open shared object file: No such file or directory"
2020-08-13T21:26:17.213+0800 7f75e5600700 -1 librbd::PluginRegistry: 0x7f75d404a630 init: failed to load plugin: parent_cache
2020-08-13T21:26:17.213+0800 7f75e5600700 -1 librbd::image::OpenRequest: failed to initialize plugin registry: (2) No such file or directory
Related issues
History
#1 Updated by Jason Dillaman 5 months ago
- Status changed from New to In Progress
- Assignee set to Jason Dillaman
#2 Updated by Jason Dillaman 5 months ago
- Status changed from In Progress to Fix Under Review
- Pull request ID set to 36802
#3 Updated by Mykola Golub 5 months ago
- Status changed from Fix Under Review to Pending Backport
- Backport set to octopus
#4 Updated by Nathan Cutler 5 months ago
- Copied to Backport #47196: octopus: tools: ceph-immutable-object-cache plugin register failed added
#5 Updated by Mykola Golub 5 months ago
- Status changed from Pending Backport to Resolved
- Backport deleted (
octopus)